# fastrender

./: .gitignore  Cargo.toml  README.md  bun.lockb  bunfig.ts  package.json
benchmark/: bun.lockb  index.ts  package.json
examples/: basic.ts  index.html
examples/markdowntest/: bun.lockb  eslint.config.mjs  package.json
examples/markdowntest/src/app/: layout.tsx  page.tsx
examples/markdowntest/src/app/benchmark/: page.tsx
examples/markdowntest/src/app/components/: Header.tsx
examples/markdowntest/src/app/docs/: page.tsx
examples/markdowntest/src/app/science/: page.tsx
examples/markdowntest/src/app/test/: page.tsx
scripts/: dev-server.ts
src/: fastrender.ts  lib.rs  styles.css
